--- a/index.html
+++ b/index.html
@@ -111,6 +111,25 @@
           hodor - hodor hodor hodor. Hodor. Hodor hodor... Hodor hodor hodor hodor hodor? </p>
         <span class='expandButton'></span>
       </div>
+
+      <div class="article">
+        <h2>Full Stack Web Developers!</h2>
+        <p class="date">Jun 19th, 2019</p>
+
+        <p>Lambda schools is the best! I have learned so much in just three weeks! djfkmdfjndkfgdnff fjfgns aosdm jekndks fensnk wojdamdnc sdsndasncz. Sajnefns sjdffjkdsfc suidjfkdnvks doaisoudw cshkcsnckjasofjas cjsjd sfjaskjfdasj.</p>
+
+        <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p>
+        <span class='expandButton'></span>
+      </div>
+
+      <div class="article">
+        <h2>You Rock!</h2>
+        <p class="date">Jun 19th, 2019</p>
+
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        <span class='expandButton'></span>
+      </div>
     </div>
   </body>
 </html>
